@@ -10,6 +10,7 @@ Changes made between Gamera File Releases
     o nholes (white rows/cols made whole count negative)
     o nholes_extended (normalization for scale invariance was missing)
     o compactness (border pixels were formerly ignored in computation)
+    o skeleton_features (crossings through x/y-axis was erronously computed)
 
  - default range for Real made smaller than sys.maxint,
    so that it should now also work on 64bit architectures
